--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,4 +1,11 @@
 ---
-- include_tasks: start.yml
+- name: Start the container
+  include_tasks: start.yml
 
-- include_tasks: configure.yml
+- name: Configure the container without SSL
+  include_tasks: configure.yml
+  when: influxdb_https_enabled == "false"
+
+- name: Configure the container with SSL
+  include_tasks: configure_ssl.yml
+  when: influxdb_https_enabled == "true"
