--- a/tasks/configure_ssl.yml
+++ b/tasks/configure_ssl.yml
@@ -3,7 +3,7 @@
   community.docker.docker_container_exec:
     container: "{{ influxdb_container.name }}"
     command: |
-      influx --ssl --hostname "{{ hostname }}" -execute "show users"
+      influx -ssl -host "{{ hostname }}" -execute "show users"
   ignore_errors: true
   register: should_create_admin
   when: not ansible_check_mode
@@ -12,7 +12,7 @@
   community.docker.docker_container_exec:
     container: "{{ influxdb_container.name }}"
     command: |
-      influx --ssl --hostname "{{ hostname }}" -execute "CREATE USER "{{ item.username }}" WITH PASSWORD '"{{ item.password }}"' WITH ALL PRIVILEGES"
+      influx -ssl -host "{{ hostname }}" -execute "CREATE USER "{{ item.username }}" WITH PASSWORD '"{{ item.password }}"' WITH ALL PRIVILEGES"
   loop: "{{ influxdb_users.admin }}"
   when: 'not ansible_check_mode and "unable to parse authentication credentials" not in should_create_admin.stdout'
 
@@ -20,7 +20,7 @@
   community.docker.docker_container_exec:
     container: "{{ influxdb_container.name }}"
     command: |
-      influx --ssl --hostname "{{ hostname }}" -username "{{ influxdb_users.admin[0].username }}" -password "{{ influxdb_users.admin[0].password }}"
+      influx -ssl -host "{{ hostname }}" -username "{{ influxdb_users.admin[0].username }}" -password "{{ influxdb_users.admin[0].password }}"
       -execute "CREATE USER "{{ item.username }}" WITH PASSWORD '"{{ item.password }}"' "
   loop: "{{ influxdb_users.regular }}"
   when: not ansible_check_mode
@@ -29,7 +29,7 @@
   community.docker.docker_container_exec:
     container: "{{ influxdb_container.name }}"
     command: |
-      influx --ssl --hostname "{{ hostname }}" -username "{{ influxdb_users.admin[0].username }}" -password "{{ influxdb_users.admin[0].password }}"
+      influx -ssl -host "{{ hostname }}" -username "{{ influxdb_users.admin[0].username }}" -password "{{ influxdb_users.admin[0].password }}"
       -execute "CREATE DATABASE "{{ item }}""
   loop: "{{ influxdb_databases }}"
   when: not ansible_check_mode
@@ -38,7 +38,7 @@
   community.docker.docker_container_exec:
     container: "{{ influxdb_container.name }}"
     command: |
-      influx --ssl --hostname "{{ hostname }}" -username "{{ influxdb_users.admin[0].username }}" -password "{{ influxdb_users.admin[0].password }}"
+      influx -ssl -host "{{ hostname }}" -username "{{ influxdb_users.admin[0].username }}" -password "{{ influxdb_users.admin[0].password }}"
       -execute "CREATE RETENTION POLICY oneweek ON {{ item }} DURATION {{ influxdb_retention_policy.duration }} REPLICATION {{ influxdb_retention_policy.replication }} {{ influxdb_retention_policy.default }}"
   loop: "{{ influxdb_retention_policy.databases }}"
   when: not ansible_check_mode
@@ -47,7 +47,7 @@
   community.docker.docker_container_exec:
     container: "{{ influxdb_container.name }}"
     command: |
-      influx --ssl --hostname "{{ hostname }}" -username "{{ influxdb_users.admin[0].username }}" -password "{{ influxdb_users.admin[0].password }}"
+      influx -ssl -host "{{ hostname }}" -username "{{ influxdb_users.admin[0].username }}" -password "{{ influxdb_users.admin[0].password }}"
       -execute "GRANT ALL ON {{ item }} TO {{ influxdb_users.regular[1].username }}"
   loop: "{{ influxdb_databases }}"
   when: not ansible_check_mode
@@ -56,7 +56,7 @@
   community.docker.docker_container_exec:
     container: "{{ influxdb_container.name }}"
     command: |
-      influx --ssl --hostname "{{ hostname }}" -username "{{ influxdb_users.admin[0].username }}" -password "{{ influxdb_users.admin[0].password }}"
+      influx -ssl -host "{{ hostname }}" -username "{{ influxdb_users.admin[0].username }}" -password "{{ influxdb_users.admin[0].password }}"
       -execute "GRANT ALL ON {{ item }} TO {{ influxdb_users.regular[0].username }}"
   loop:
     - '_internal'
