influxdb container with docker-compose

--- a/tasks/start.yml
+++ b/tasks/start.yml
@@ -6,16 +6,24 @@
     influxdb_container_env: "{{ influxdb_container_standalone_setup_details.env|default({}, true) }}"
   when: influxdb_setup == "standalone"
 
-- name: Start a influxdb container
-  community.docker.docker_container:
-    name: "{{ influxdb_container.name }}"
-    hostname: "{{ influxdb_container.hostname }}"
-    image: "{{ influxdb_container.image }}"
-    state: started
-    restart_policy: always
-    volumes: "{{ influxdb_container_volumes }}"
-    ports: "{{ influxdb_container_ports }}"
-    env: "{{ influxdb_container_env }}"
+- name: Create /opt/influxdb directory
+  file:
+    path: /opt/influxdb
+    state: directory
+    mode: '0755'
+
+- name: Copy docker-compose.yml to /opt/influxdb
+  template:
+    src: docker-compose.yml.j2
+    dest: /opt/influxdb/docker-compose.yml
+    mode: '0644'
+
+- name: Start influxdb service with docker-compose
+  community.docker.docker_compose_v2:
+    project_src: /opt/influxdb
+    state: present
+    pull: always
+  register: docker_compose_output
 
 - name: Pause for some seconds to give time to the container to come up
   pause:
