--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -28,27 +28,27 @@
 - name: Create databases
   community.docker.docker_container_exec:
     container: "{{ influxdb_container.name }}"
-    command: |
+    command: >
       influx -username "{{ influxdb_users.admin[0].username }}" -password "{{ influxdb_users.admin[0].password }}"
-      -execute "CREATE DATABASE "{{ item }}""
+      -execute "CREATE DATABASE "{{ item | quote }}""
   loop: "{{ influxdb_databases }}"
   when: not ansible_check_mode
 
 - name: create 2 week retention policy
   community.docker.docker_container_exec:
     container: "{{ influxdb_container.name }}"
-    command: |
+    command: >
       influx -username "{{ influxdb_users.admin[0].username }}" -password "{{ influxdb_users.admin[0].password }}"
-      -execute "CREATE RETENTION POLICY oneweek ON {{ item }} DURATION {{ influxdb_retention_policy.duration }} REPLICATION {{ influxdb_retention_policy.replication }} {{ influxdb_retention_policy.default }}"
+      -execute "CREATE RETENTION POLICY oneweek ON {{ item | quote }} DURATION {{ influxdb_retention_policy.duration }} REPLICATION {{ influxdb_retention_policy.replication }} {{ influxdb_retention_policy.default }}"
   loop: "{{ influxdb_retention_policy.databases }}"
   when: not ansible_check_mode
 
 - name: Grant permissions to user galaxy
   community.docker.docker_container_exec:
     container: "{{ influxdb_container.name }}"
-    command: |
+    command: >
       influx -username "{{ influxdb_users.admin[0].username }}" -password "{{ influxdb_users.admin[0].password }}"
-      -execute "GRANT ALL ON {{ item }} TO {{ influxdb_users.regular[1].username }}"
+      -execute "GRANT ALL ON {{ item | quote }} TO {{ influxdb_users.regular[1].username }}"
   loop: "{{ influxdb_databases }}"
   when: not ansible_check_mode
 
