Fix shell quoting for remaining influx -execute commands in configure.yml for consistency and correctness

--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -2,8 +2,8 @@
 - name: Check need to create admin
   community.docker.docker_container_exec:
     container: "{{ influxdb_container.name }}"
-    command: |
-      influx -execute "show users"
+    command: >
+      influx -execute 'show users'
   ignore_errors: true
   register: should_create_admin
   when: not ansible_check_mode
@@ -11,17 +11,17 @@
 - name: Create initial admin user
   community.docker.docker_container_exec:
     container: "{{ influxdb_container.name }}"
-    command: |
-      influx -execute "CREATE USER "{{ item.username }}" WITH PASSWORD '"{{ item.password }}"' WITH ALL PRIVILEGES"
+    command: >
+      influx -execute 'CREATE USER "{{ item.username }}" WITH PASSWORD "{{ item.password }}" WITH ALL PRIVILEGES'
   loop: "{{ influxdb_users.admin }}"
   when: 'not ansible_check_mode and "unable to parse authentication credentials" not in should_create_admin.stdout'
 
 - name: Create users
   community.docker.docker_container_exec:
     container: "{{ influxdb_container.name }}"
-    command: |
+    command: >
       influx -username "{{ influxdb_users.admin[0].username }}" -password "{{ influxdb_users.admin[0].password }}"
-      -execute "CREATE USER "{{ item.username }}" WITH PASSWORD '"{{ item.password }}"' "
+      -execute 'CREATE USER "{{ item.username }}" WITH PASSWORD "{{ item.password }}"'
   loop: "{{ influxdb_users.regular }}"
   when: not ansible_check_mode
 
@@ -48,18 +48,18 @@
     container: "{{ influxdb_container.name }}"
     command: >
       influx -username "{{ influxdb_users.admin[0].username }}" -password "{{ influxdb_users.admin[0].password }}"
-      -execute 'GRANT ALL ON {{ item | quote }} TO {{ influxdb_users.regular[1].username }}'
+      -execute 'GRANT ALL ON {{ item | quote }} TO "{{ influxdb_users.regular[1].username }}"'
   loop: "{{ influxdb_databases }}"
   when: not ansible_check_mode
 
 - name: Grant permissions to user grafana
   community.docker.docker_container_exec:
     container: "{{ influxdb_container.name }}"
-    command: |
+    command: >
       influx -username "{{ influxdb_users.admin[0].username }}" -password "{{ influxdb_users.admin[0].password }}"
-      -execute "GRANT ALL ON {{ item }} TO {{ influxdb_users.regular[0].username }}"
+      -execute 'GRANT ALL ON {{ item | quote }} TO "{{ influxdb_users.regular[0].username }}"'
   loop:
-    - '_internal'
+    - _internal
     - galaxy
     - galaxy_stats
     - grt
